<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_shape"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/card_number"
        android:textColor="@color/secondTextColor"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/card_list_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="4571 7360"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_weight="1"
        android:text="@string/brand"
        android:textColor="@color/secondTextColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/card_list_scheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="VISA"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bank"
        android:textColor="@color/secondTextColor"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/card_list_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="Jyske Bank"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/card_list_bank_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="www.jyskebank.dk"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/card_list_bank_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="+4589893300"
        android:textSize="16sp" />


</LinearLayout>